[] -- Añadidos los campos de Baños y Habitaciones, ademas de no subir toda la interfaz con el teclado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="save">Save</string>
     <string name="image">Image</string>
     <string name="delete">Delete</string>
+    <string name="prompt_Baths">Bathrooms</string>
+    <string name="prompt_rooms">Rooms</string>
 </resources>
