--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="delete">Delete</string>
     <string name="prompt_Baths">Bathrooms</string>
     <string name="prompt_rooms">Rooms</string>
+    <string name="parcela_image">Parcela Image</string>
+    <string name="favorite">Favorite</string>
+    <string name="parcela_name">Name</string>
 </resources>
