--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,10 @@
     <string name="prompt_square_meters">Meters²</string>
     <string name="prompt_price">Price</string>
     <string name="prompt_floors">Floors</string>
+    <string name="username">Username</string>
+    <string name="message">Message</string>
+    <string name="time">16:55</string>
+    <string name="chat">Chat</string>
+    <string name="prompt_message">Message</string>
+    <string name="send_message">Send message</string>
 </resources>
