--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,6 @@
     <string name="logout">Logout</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
+    <string name="help">Help</string>
+    <string name="share">Share</string>
 </resources>
